--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.0.1</version>
+      <!-- version>2.0.1</version -->
     </dependency>
     <dependency>
       <groupId>io.dropwizard</groupId>
@@ -92,12 +92,12 @@
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
-      <version>1.1.0.Final</version>
+      <!-- version>1.1.0.Final</version -->
     </dependency>
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
-      <version>${mybatis.version}</version>
+      <!-- version>${mybatis.version}</version -->
     </dependency>
     <dependency>
       <groupId>io.dropwizard</groupId>
