Add GNA Name Parser and some more Normalizer progress incl porting dwca test resources

--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -34,6 +34,10 @@
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
+            <artifactId>colplus-parser</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
             <artifactId>colplus-dao</artifactId>
         </dependency>
         <dependency>
@@ -94,4 +98,19 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>false</filtering>
+            </testResource>
+        </testResources>
+    </build>
 </project>
