--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <gbif-common.version>0.36</gbif-common.version>
     <guava.version>21.0</guava.version>
     <hikaricp.version>2.7.1</hikaricp.version>
+    <hk2.version>2.5.0-b32</hk2.version>
     <!-- make sure jackson matches dropwizards jackson version -->
     <jackson2.version>2.8.10</jackson2.version>
     <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
@@ -145,6 +146,11 @@
 	      <artifactId>colplus-dwca</artifactId>
           <version>${project.version}</version>
 	    </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-parser</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Dropwizard Bill of materials. Imports all versions just like Dropwizard uses -->
         <dependency>
@@ -158,6 +164,23 @@
             <version>${dropwizard.version}</version>
             <type>pom</type>
             <scope>import</scope>
+        </dependency>
+
+        <!-- HK2 dependency injection - follow closely the version used by Jersey via Dropwizard -->
+        <dependency>
+            <groupId>org.glassfish.hk2</groupId>
+            <artifactId>hk2-api</artifactId>
+            <version>${hk2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.hk2</groupId>
+            <artifactId>hk2-locator</artifactId>
+            <version>${hk2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.hk2</groupId>
+            <artifactId>hk2-utils</artifactId>
+            <version>${hk2.version}</version>
         </dependency>
 
         <!-- javax -->
