Wire up Importer and create ImporterIT to import names and taxa from a dwca. Basics work, but needs fleshed out a lot more

--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-dao</artifactId>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
