--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,14 @@
 	      <artifactId>colplus-dao</artifactId>
           <version>${project.version}</version>
 	    </dependency>
-	    <dependency>
+        <dependency>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-dao</artifactId>
+            <version>${project.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
 	      <groupId>org.col</groupId>
 	      <artifactId>colplus-dwca</artifactId>
           <version>${project.version}</version>
