--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -42,10 +42,6 @@
         </dependency>
         <dependency>
             <groupId>org.gbif</groupId>
-            <artifactId>gbif-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.gbif</groupId>
             <artifactId>dwca-io</artifactId>
         </dependency>
 
@@ -95,6 +91,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.embed</groupId>
+            <artifactId>postgresql-embedded</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
