--- a/colplus-dwca/pom.xml
+++ b/colplus-dwca/pom.xml
@@ -7,5 +7,5 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   <artifactId>colplus-dwca</artifactId>
-  <name>CoL backend services (DAO)</name>
+  <name>CoL backend services (DwC-A)</name>
 </project>
