--- a/colplus-dao/pom.xml
+++ b/colplus-dao/pom.xml
@@ -17,6 +17,10 @@
       <groupId>org.col</groupId>
       <artifactId>colplus-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.col</groupId>
+      <artifactId>colplus-common</artifactId>
+    </dependency>
 
     <!-- mybatis / DB -->
     <dependency>
