Use & for last author in authorship

--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -109,6 +109,12 @@
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-api</artifactId>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
