--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>CoL backend services</name>
+  <name>Clearinghouse backend services</name>
   <url>http://github.org/Sp2000/${project.artifactId}</url>
 
   <scm>
