--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
-  <name>Clearinghouse backend services</name>
+  <name>CoL backend services</name>
   <url>http://github.org/Sp2000/${project.artifactId}</url>
 
   <scm>
@@ -344,7 +344,6 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
-            <scope>test</scope>
         </dependency>
 
 	    <!-- JACKSON2 -->
