--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,12 @@
     <kryo.version>4.0.1</kryo.version>
     <logback.version>1.2.3</logback.version>
     <mapdb.version>3.0.5</mapdb.version>
+    <mockito.version>2.12.0</mockito.version>
     <mybatis.version>3.4.5</mybatis.version>
     <name-parser.version>2.24</name-parser.version>
     <neo4j.version>3.2.3</neo4j.version>
     <postgresql.version>42.1.4</postgresql.version>
-    <postgresql-embedded>2.5</postgresql-embedded>
+    <postgresql-embedded.version>2.5</postgresql-embedded.version>
     <slf4j.version>1.7.24</slf4j.version>
     <validation-api.version>2.0.0.Final</validation-api.version>
     <!-- GNA Parser deps -->
@@ -404,9 +405,15 @@
 	    <dependency>
 	      <groupId>ru.yandex.qatools.embed</groupId>
 	      <artifactId>postgresql-embedded</artifactId>
-	      <version>${postgresql-embedded}</version>
+	      <version>${postgresql-embedded.version}</version>
 	      <scope>test</scope>
 	    </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
   </dependencyManagement>
 
