dataset search finished except for resource method

--- a/colplus-dao/src/test/resources/pg-test.yaml
+++ b/colplus-dao/src/test/resources/pg-test.yaml
@@ -1,6 +1,12 @@
 # set host to null to use the embedded pg server
-host: ${pg-test.host}
+#host: ${pg-test.host}
+#port: 5432
+#database: ${pg-test.database}
+#user: ${pg-test.user}
+#password: ${pg-test.password}
+
+host: localhost
 port: 5432
-database: ${pg-test.database}
-user: ${pg-test.user}
-password: ${pg-test.password}
+database: colplus
+user: postgres
+password: 
