--- a/colplus-dao/src/test/resources/pg-test.yaml
+++ b/colplus-dao/src/test/resources/pg-test.yaml
@@ -1,12 +1,6 @@
 # set host to null to use the embedded pg server
-#host: ${pg-test.host}
-#port: 5432
-#database: ${pg-test.database}
-#user: ${pg-test.user}
-#password: ${pg-test.password}
-
-host: localhost
+host: ${pg-test.host}
 port: 5432
-database: colplus
-user: postgres
-password: 
+database: ${pg-test.database}
+user: ${pg-test.user}
+password: ${pg-test.password}
