--- a/colplus-api/pom.xml
+++ b/colplus-api/pom.xml
@@ -20,6 +20,10 @@
         <!-- GBIF -->
         <dependency>
             <groupId>org.gbif</groupId>
+            <artifactId>name-parser-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.gbif</groupId>
             <artifactId>dwc-api</artifactId>
         </dependency>
 
