--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>colplus-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.gbif</groupId>
+            <artifactId>name-parser-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.col</groupId>
             <artifactId>colplus-common</artifactId>
         </dependency>
@@ -82,6 +86,11 @@
         <dependency>
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>0.42</version>
         </dependency>
         <dependency>
             <groupId>it.unimi.dsi</groupId>
