Add dataset.importFrequency, make Name rank, origin & type mandatory. Add dataset_import table and populate it with error or metrics at the end of imports

--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -97,6 +97,13 @@
             <artifactId>fastutil</artifactId>
         </dependency>
 
+        <!-- commons -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
         <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
