--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     <!-- make sure jackson matches dropwizards version -->
     <jackson2.version>2.8.10</jackson2.version>
     <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
+    <javers.version>3.7.5</javers.version>
     <!-- make sure jersey matches dropwizards version -->
     <jersey.version>2.25.1</jersey.version>
     <jsr305.version>3.0.2</jsr305.version>
@@ -389,6 +390,11 @@
 	      <artifactId>fastutil</artifactId>
 	      <version>${fastutil.version}</version>
 	    </dependency>
+        <dependency>
+          <groupId>org.javers</groupId>
+          <artifactId>javers-core</artifactId>
+          <version>${javers.version}</version>
+        </dependency>
 
 	    <!-- TEST SCOPE -->
 	    <dependency>
