Create new common dropwizard project with a new logback socket appender factory

--- a/colplus-cli/pom.xml
+++ b/colplus-cli/pom.xml
@@ -41,6 +41,10 @@
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
+            <artifactId>colplus-common-dw</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
             <artifactId>colplus-dwca</artifactId>
         </dependency>
         <dependency>
