--- a/colplus-ws/pom.xml
+++ b/colplus-ws/pom.xml
@@ -48,11 +48,19 @@
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-jersey</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-forms</artifactId>
+        </dependency>
 
         <!-- CoL -->
         <dependency>
             <groupId>org.col</groupId>
             <artifactId>colplus-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.col</groupId>
+            <artifactId>colplus-parser</artifactId>
         </dependency>
         <dependency>
             <groupId>org.col</groupId>
