--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,11 @@
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-forms</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-bom</artifactId>
             <version>${dropwizard.version}</version>
             <type>pom</type>
