--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <jsr305.version>3.0.2</jsr305.version>
     <junit.version>4.12</junit.version>
     <kryo.version>4.0.1</kryo.version>
+    <kryo-serializers.version>0.42</kryo-serializers.version>
     <logback.version>1.2.3</logback.version>
     <mapdb.version>3.0.5</mapdb.version>
     <mockito.version>2.12.0</mockito.version>
@@ -355,6 +356,11 @@
             <artifactId>kryo</artifactId>
             <version>${kryo.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.javakaffee</groupId>
+            <artifactId>kryo-serializers</artifactId>
+            <version>${kryo-serializers.version}</version>
+        </dependency>
 
 	    <!-- logging -->
 	    <dependency>
@@ -384,6 +390,11 @@
 	      <artifactId>jackson-dataformat-yaml</artifactId>
 	      <version>${jackson2.version}</version>
 	    </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson2.version}</version>
+        </dependency>
 
 	    <!-- other -->
 	    <dependency>
